--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 click==8.0.3
+colorama==0.4.4
 cycler==0.11.0
 Flask==2.0.2
-fonttools==4.28.3
+fonttools==4.28.4
 itsdangerous==2.0.1
 Jinja2==3.0.3
 kiwisolver==1.3.2
